objects/Invoicing_Details__c.object
<CustomObject>
    <fields>
        <fullName>Billed_to_Company_Name__c</fullName>
        <label>Billed to Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_POC__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoicing Details</relationshipLabel>
        <relationshipName>Invoicing_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Billing_POC_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Billing POC 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoicing Details (CC Billing POC 2)</relationshipLabel>
        <relationshipName>Invoicing_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Billing_POC_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Billing POC 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoicing Details (CC Billing POC 3)</relationshipLabel>
        <relationshipName>Invoicing_Details3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Billing_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Billing POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoicing Details (CC Billing POC)</relationshipLabel>
        <relationshipName>Invoicing_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_POC_Email_2__c</fullName>
        <formula>CC_Billing_POC_2__r.Email</formula>
        <label>CC POC Email 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Email_3__c</fullName>
        <formula>CC_Billing_POC_3__r.Email</formula>
        <label>CC POC Email 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Email__c</fullName>
        <formula>CC_Billing_POC__r.Email</formula>
        <label>CC POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Mailing_City__c</fullName>
        <formula>CC_Billing_POC__r.MailingCity</formula>
        <label>CC POC Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Mailing_Country__c</fullName>
        <formula>CC_Billing_POC__r.MailingCountry</formula>
        <label>CC POC Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Mailing_State__c</fullName>
        <formula>CC_Billing_POC__r.MailingState</formula>
        <label>CC POC Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Mailing_Street__c</fullName>
        <formula>CC_Billing_POC__r.MailingStreet</formula>
        <label>CC POC Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Mobile__c</fullName>
        <formula>CC_Billing_POC__r.MobilePhone</formula>
        <label>CC POC Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Phone__c</fullName>
        <formula>CC_Billing_POC__r.Phone</formula>
        <label>CC POC Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_POC_Postal_Code__c</fullName>
        <formula>CC_Billing_POC__r.MailingPostalCode</formula>
        <label>CC POC Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Code__c</fullName>
        <label>Club Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Opportunity__r.CVII_Contract_Number__c</formula>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <formula>Text( Billing_POC__r.Iso_Tract__c)</formula>
        <label>Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Opportunity__r.Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Note__c</fullName>
        <label>Email Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Note_1__c</fullName>
        <inlineHelpText>BuyerName/PurchaseDate/Other</inlineHelpText>
        <label>Invoice Note 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Note_2__c</fullName>
        <inlineHelpText>Event Code / Venue Code</inlineHelpText>
        <label>Invoice Note 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Details_Old_Id__c</fullName>
        <label>Invoicing Details Old Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Reference_to_Properties__c</fullName>
        <label>Link / Reference to Properties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoicing Details</relationshipLabel>
        <relationshipName>Invoicing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Address__c</fullName>
        <formula>Billing_POC__r.MailingStreet &amp; Billing_POC__r.MailingCity &amp; 
Billing_POC__r.MailingState &amp; Billing_POC__r.MailingPostalCode &amp; Billing_POC__r.MailingCountry</formula>
        <label>POC Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Email__c</fullName>
        <formula>Billing_POC__r.Email</formula>
        <label>POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Mailing_City__c</fullName>
        <formula>Billing_POC__r.MailingCity</formula>
        <label>POC Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Mailing_Country__c</fullName>
        <formula>Billing_POC__r.MailingCountry</formula>
        <label>POC Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Mailing_State__c</fullName>
        <formula>Billing_POC__r.MailingState</formula>
        <label>POC Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Mailing_Street__c</fullName>
        <formula>Billing_POC__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Mobile__c</fullName>
        <formula>Billing_POC__r.MobilePhone</formula>
        <label>POC Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Phone__c</fullName>
        <formula>Billing_POC__r.Phone</formula>
        <label>POC Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Postal_Code__c</fullName>
        <formula>Billing_POC__r.MailingPostalCode</formula>
        <label>POC Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Cash and Credit Card Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Opportunity__r.Account.Country_Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City1__c</fullName>
        <formula>IF(OR(
            ISPICKVAL(Opportunity__r.Product__c,"EMI"),
            ISPICKVAL(Opportunity__r.Product__c,"CSN"),
            ISPICKVAL(Opportunity__r.Product__c,"Decision Street")
          ),
          Opportunity__r.Account.BillingCity, Billing_POC__r.MailingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping City1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country1__c</fullName>
        <formula>IF(OR(
            ISPICKVAL(Opportunity__r.Product__c,"EMI"),
            ISPICKVAL(Opportunity__r.Product__c,"CSN"),
            ISPICKVAL(Opportunity__r.Product__c,"Decision Street")
          ),
         TEXT (Opportunity__r.Account.Iso_Tract__c), TEXT (Billing_POC__r.Iso_Tract__c)
          )</formula>
        <label>Shipping Country1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province1__c</fullName>
        <formula>IF(OR( 
ISPICKVAL(Opportunity__r.Product__c,"EMI"), 
ISPICKVAL(Opportunity__r.Product__c,"CSN"), 
ISPICKVAL(Opportunity__r.Product__c,"Decision Street") 
), 
Text(Opportunity__r.Account.BillingStateCode), Text(Billing_POC__r.MailingStateCode)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State/Province1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street1__c</fullName>
        <formula>IF(OR( 
ISPICKVAL(Opportunity__r.Product__c,"EMI"), 
ISPICKVAL(Opportunity__r.Product__c,"CSN"), 
ISPICKVAL(Opportunity__r.Product__c,"Decision Street") 
), 
Opportunity__r.Account.BillingStreet, Billing_POC__r.MailingStreet
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code1__c</fullName>
        <formula>IF(OR( 
ISPICKVAL(Opportunity__r.Product__c,"EMI"), 
ISPICKVAL(Opportunity__r.Product__c,"CSN"), 
ISPICKVAL(Opportunity__r.Product__c,"Decision Street") 
), 
Opportunity__r.Account.BillingPostalCode, Billing_POC__r.MailingPostalCode
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Zip/Postal Code1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Note__c</fullName>
        <label>Subject Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>Created for Invoicing Details for TRACT</description>
    <label>Invoicing Details</label>
    <nameField>
        <displayFormat>Invoice-{0000000000}</displayFormat>
        <label>Invoicing Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoicing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>